--- a/color-splash.css
+++ b/color-splash.css
@@ -19,27 +19,27 @@
 	border: 1px solid grey;
 }
 
-#color-splash #playground .cell[data-color="blue"] {
+#color-splash [data-color="blue"]{
 	background-color: blue;
 }
 
-#color-splash #playground .cell[data-color="red"] {
+#color-splash [data-color="red"] {
 	background-color: red;
 }
 
-#color-splash #playground .cell[data-color="green"] {
+#color-splash [data-color="green"] {
 	background-color: green;
 }
 
-#color-splash #playground .cell[data-color="yellow"] {
+#color-splash [data-color="yellow"] {
 	background-color: yellow;
 }
 
-#color-splash #playground .cell[data-color="purple"] {
+#color-splash [data-color="purple"] {
 	background-color: purple;
 }
 
-#color-splash #playground .cell[data-color="orange"] {
+#color-splash [data-color="orange"] {
 	background-color: orange;
 }
 
